src/snapshots/rura__presets_widget__tests__command_input.snap
---
source: src/presets_widget.rs
expression: terminal.backend()
---
"                                        "
"            ┌ Presets ──────┐           "
"            └───────────────┘           "
"                                        "
