src/snapshots/rura__presets_widget__tests__no_presets.snap
---
source: src/presets_widget.rs
expression: terminal.backend()
---
"                                        "
"                                        "
"                                        "
"                                        "
"            ┌ Presets ──────┐           "
"            └───────────────┘           "
"                                        "
"                                        "
"                                        "
"                                        "
