src/snapshots/rura__presets_widget__tests__presets.snap
---
source: src/presets_widget.rs
expression: terminal.backend()
---
"                                        "
"                                        "
"                                        "
"    ┌ Presets ─────────────────────┐    "
"    │[j] jq -c ''                  │    "
"    │    grep | sort | uniq -c | so│    "
"    └──────────────────────────────┘    "
"                                        "
"                                        "
"                                        "
